fix issue #131 content overflow of navbar

--- a/hugo/src/scss/_navbar.scss
+++ b/hugo/src/scss/_navbar.scss
@@ -18,7 +18,7 @@
     }
     .nav-link {
       position: relative;
-      padding: ($spacer * 2) ($spacer / 2) !important;
+      padding: ($spacer * 2) ($spacer / 3) !important;
       &:after {
         content: '';
         position: absolute;
